<resources>
    <string name="app_name" translatable="false">PlotSpot</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="offline">Offline</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="popular">Popular</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="detail_movie_photo">Detail movie photo</string>
    <string name="watch_later_btn">Watch Later</string>
    <string name="sign_up_offer">Don\'t have an account? Click here to Sign Up!</string>
    <string name="create_account">Create account</string>
    <string name="back_arrow">Arrow to return to auth</string>
    <string name="detail">Detail</string>
    <string name="register">Registration</string>
    <string name="avatar">Avatar</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="change_password_text">Change password</string>
    <string name="language_change_text">Language</string>
    <string name="logout_text">Logout</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="logout_confirmation">Do you really want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password_fragment_title">Password change</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="check_internet_connection_warning">Check internet connection</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="warning">Warning</string>
    <string name="blank_overview">No overview yet</string>
    <string name="no_user_warning">Log in to add to favorites</string>
    <string name="favorites_insert_success">Added to favorites</string>
    <string name="favorites_insert_error">Error when adding to favorites</string>
    <string name="favorite_button_text">Favorite button</string>
    <string name="favorites_warning">An error occurred when displaying favorites. Please, check internent connection</string>
    <string name="favorite_delete_success">Removed from favorites</string>
    <string name="favorite_delete_error">Error when removing from favorites</string>
    <string name="favorite_fragment_warning">Log in to view your favorites</string>
</resources>