<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_graph"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/search_graph"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/favorites_graph"
        android:icon="@drawable/favorites"
        android:title="@string/favorites"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/profile_graph"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="collapseActionView"/>

</menu>