<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.coursework.ui.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/to_movie_detail"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.coursework.ui.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.coursework.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/to_login_from_profile"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.coursework.ui.fragments.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="movie"
            app:argType="com.example.coursework.model.Movie" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.coursework.ui.fragments.LoginFragment"
        android:label="@string/login" >
        <action
            android:id="@+id/to_profile_from_login"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/to_reg_from_login"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.coursework.ui.fragments.RegisterFragment"
        android:label="@string/register" >
        <action
            android:id="@+id/to_profile_from_reg"
            app:destination="@id/profileFragment" />
    </fragment>
</navigation>