<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.movie.fragments.DetailFragment"
    android:padding="16dp">
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:indeterminate="true"
        app:indicatorColor="@color/orange"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_internet_connection_warning"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@drawable/custom_button" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:contentDescription="@string/detail_movie_photo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Fight club"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4.6"
            android:textSize="18sp"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:text=""
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:padding="16dp"/>

        <Button
            android:id="@+id/watch_later_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/watch_later_btn" />
    </LinearLayout>



</LinearLayout>