<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.movie.fragments.SearchFragment">

    <LinearLayout
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_internet_connection_warning"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@drawable/custom_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/nothing_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_was_found"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/main_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <ProgressBar
            android:id="@+id/search_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/orange"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_searched_item" />
    </LinearLayout>
</LinearLayout>