<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.profile.fragments.ProfileFragment">

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text=""/>

    <LinearLayout
        android:id="@+id/language_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"
            android:contentDescription="@null"
            android:src="@drawable/language" />

        <Spinner
            android:id="@+id/language_change_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/language_change_text"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_background"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/change_password"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_change"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_background_logout"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/logout_text"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_change"
        app:layout_constraintVertical_bias="0.0" />
</LinearLayout>